--- a/Speart/src/vista/paneles/evaluacion/FrmTests.form
+++ b/Speart/src/vista/paneles/evaluacion/FrmTests.form
@@ -59,7 +59,7 @@
               </Constraints>
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
-                <Property name="columns" type="int" value="0"/>
+                <Property name="columns" type="int" value="1"/>
                 <Property name="rows" type="int" value="10"/>
               </Layout>
             </Container>
@@ -71,7 +71,7 @@
               </Constraints>
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
-                <Property name="columns" type="int" value="0"/>
+                <Property name="columns" type="int" value="1"/>
                 <Property name="rows" type="int" value="10"/>
               </Layout>
             </Container>
@@ -83,7 +83,7 @@
               </Constraints>
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
-                <Property name="columns" type="int" value="0"/>
+                <Property name="columns" type="int" value="1"/>
                 <Property name="rows" type="int" value="10"/>
               </Layout>
             </Container>
@@ -95,7 +95,7 @@
               </Constraints>
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
-                <Property name="columns" type="int" value="0"/>
+                <Property name="columns" type="int" value="1"/>
                 <Property name="rows" type="int" value="10"/>
               </Layout>
             </Container>
@@ -107,7 +107,7 @@
               </Constraints>
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
-                <Property name="columns" type="int" value="0"/>
+                <Property name="columns" type="int" value="1"/>
                 <Property name="rows" type="int" value="10"/>
               </Layout>
             </Container>
@@ -118,7 +118,10 @@
                 </Constraint>
               </Constraints>
 
-              <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+              <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
+                <Property name="columns" type="int" value="1"/>
+                <Property name="rows" type="int" value="10"/>
+              </Layout>
             </Container>
           </SubComponents>
         </Container>
