--- a/Speart/src/vista/paneles/operaciones/PnlOperaciones.form
+++ b/Speart/src/vista/paneles/operaciones/PnlOperaciones.form
@@ -77,6 +77,9 @@
                   </Constraints>
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtNuevaPregunt">
+                  <Properties>
+                    <Property name="toolTipText" type="java.lang.String" value="Ingresa la pregunta para el conocimiento seleccionado"/>
+                  </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                       <AbsoluteConstraints x="230" y="80" width="450" height="30"/>
@@ -235,6 +238,7 @@
                       <Image iconType="3" name="/vista/imagenes/salir_1.png"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Cancelar"/>
+                    <Property name="toolTipText" type="java.lang.String" value="Candelar para no guardar  la informaci&#xf3;n"/>
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -573,7 +577,7 @@
                         <Property name="columns" type="int" value="20"/>
                         <Property name="lineWrap" type="boolean" value="true"/>
                         <Property name="rows" type="int" value="5"/>
-                        <Property name="toolTipText" type="java.lang.String" value="Ingrese su informacion "/>
+                        <Property name="toolTipText" type="java.lang.String" value="Ingrese su informacion  cuando destreza sea baja"/>
                       </Properties>
                     </Component>
                   </SubComponents>
@@ -768,7 +772,7 @@
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="40" y="230" width="100" height="40"/>
+                      <AbsoluteConstraints x="40" y="230" width="110" height="40"/>
                     </Constraint>
                   </Constraints>
                 </Component>
@@ -798,6 +802,7 @@
                       <Image iconType="3" name="/vista/imagenes/salir_1.png"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Eliminar"/>
+                    <Property name="toolTipText" type="java.lang.String" value="Eliminar destreza de competencia universal"/>
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -843,6 +848,9 @@
                   </SubComponents>
                 </Container>
                 <Component class="javax.swing.JTextField" name="txtDestrezaCompUniv">
+                  <Properties>
+                    <Property name="toolTipText" type="java.lang.String" value="Ingrese la destreza"/>
+                  </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                       <AbsoluteConstraints x="110" y="300" width="270" height="30"/>
@@ -866,6 +874,7 @@
                         <Property name="columns" type="int" value="20"/>
                         <Property name="lineWrap" type="boolean" value="true"/>
                         <Property name="rows" type="int" value="5"/>
+                        <Property name="toolTipText" type="java.lang.String" value="Ingrese su informaci&#xf3;n si su destreza es media"/>
                       </Properties>
                     </Component>
                   </SubComponents>
@@ -887,6 +896,7 @@
                         <Property name="columns" type="int" value="20"/>
                         <Property name="lineWrap" type="boolean" value="true"/>
                         <Property name="rows" type="int" value="5"/>
+                        <Property name="toolTipText" type="java.lang.String" value="Ingrese su informaci&#xf3;n si compet"/>
                       </Properties>
                     </Component>
                   </SubComponents>
@@ -908,6 +918,7 @@
                         <Property name="columns" type="int" value="20"/>
                         <Property name="lineWrap" type="boolean" value="true"/>
                         <Property name="rows" type="int" value="5"/>
+                        <Property name="toolTipText" type="java.lang.String" value="Ingrese  su informaci&#xf3;n si la destreza es baja"/>
                       </Properties>
                     </Component>
                   </SubComponents>
@@ -1000,11 +1011,15 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Berlin Sans FB" size="12" style="0"/>
                     </Property>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/vista/imagenes/salir_1.png"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="Cancelar"/>
+                    <Property name="toolTipText" type="java.lang.String" value="Cancelar  si no desea guardar la informaci&#xf3;n"/>
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="410" y="440" width="100" height="40"/>
+                      <AbsoluteConstraints x="410" y="440" width="110" height="40"/>
                     </Constraint>
                   </Constraints>
                 </Component>
@@ -1160,6 +1175,9 @@
                   </Constraints>
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtDescripcionTrabEq">
+                  <Properties>
+                    <Property name="toolTipText" type="java.lang.String" value="Ingrese la destreza"/>
+                  </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                       <AbsoluteConstraints x="110" y="300" width="280" height="30"/>
@@ -1183,6 +1201,7 @@
                         <Property name="columns" type="int" value="20"/>
                         <Property name="lineWrap" type="boolean" value="true"/>
                         <Property name="rows" type="int" value="5"/>
+                        <Property name="toolTipText" type="java.lang.String" value="Ingrese la informaci&#xf3;n si la destreza es  alta"/>
                       </Properties>
                     </Component>
                   </SubComponents>
@@ -1204,6 +1223,7 @@
                         <Property name="columns" type="int" value="20"/>
                         <Property name="lineWrap" type="boolean" value="true"/>
                         <Property name="rows" type="int" value="5"/>
+                        <Property name="toolTipText" type="java.lang.String" value="Ingrese si la destreza es media"/>
                       </Properties>
                     </Component>
                   </SubComponents>
@@ -1225,6 +1245,7 @@
                         <Property name="columns" type="int" value="20"/>
                         <Property name="lineWrap" type="boolean" value="true"/>
                         <Property name="rows" type="int" value="5"/>
+                        <Property name="toolTipText" type="java.lang.String" value="Ingrese si la destreza  es baja"/>
                       </Properties>
                     </Component>
                   </SubComponents>
