--- a/Speart/src/vista/paneles/evaluacion/DialogTest.form
+++ b/Speart/src/vista/paneles/evaluacion/DialogTest.form
@@ -40,7 +40,9 @@
       <SubComponents>
         <Container class="javax.swing.JPanel" name="pnlTest">
           <Properties>
-            <Property name="opaque" type="boolean" value="false"/>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="fe" green="fe" red="fe" type="rgb"/>
+            </Property>
             <Property name="verifyInputWhenFocusTarget" type="boolean" value="false"/>
           </Properties>
 
