--- a/Speart/src/vista/paneles/evaluacion/PnlTexto.form
+++ b/Speart/src/vista/paneles/evaluacion/PnlTexto.form
@@ -5,6 +5,7 @@
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[902, 0]"/>
     </Property>
+    <Property name="opaque" type="boolean" value="false"/>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[902, 35]"/>
     </Property>
